projects/verify_custom_orangehrm/outputs/execution_error.log
============================= test session starts =============================
platform win32 -- Python 3.11.9, pytest-9.0.2, pluggy-1.6.0 -- C:\Users\vishv\AppData\Local\Programs\Python\Python311\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\vishv\.gemini\antigravity\playground\inner-event
plugins: anyio-4.12.0, langsmith-0.5.2, base-url-2.1.0, playwright-0.7.2
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
____ ERROR collecting projects/verify_custom_orangehrm/tests/test_main.py _____
..\..\..\..\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\..\..\..\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\..\..\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
..\..\..\..\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
projects\verify_custom_orangehrm\tests\test_main.py:58: in <module>
    from projects.verify_custom_orangehrm.pages.login_page import LoginPage
E     File "C:\Users\vishv\.gemini\antigravity\playground\inner-event\projects\verify_custom_orangehrm\pages\login_page.py", line 12
E       def Username Input(self):
E                    ^^^^^
E   SyntaxError: expected '('
=========================== short test summary info ===========================
ERROR projects/verify_custom_orangehrm/tests/test_main.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.39s ===============================

